--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,4 @@ axum = "0.8.3"
 tokio = { version = "1.35.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 alloy = { version = "0.14.0", features = ["full"] }
+clap = { version = "4.4", features = ["derive"] }
