--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1.35.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 alloy = { version = "0.14.0", features = ["full"] }
 clap = { version = "4.4", features = ["derive"] }
+tower-http = { version = "0.6.2", features = ["cors"] }
